sort.pancake.BasicPancake.scala.error
Erreur de compilation :
BasicPancake:6: error: not found: value nbCrepe
    while (getRayonCrepe(rang)!=nbCrepe){
                                ^