sort.pancake.BasicPancake.scala.code
def solve() {
  var nbCrepes=getTaillePile()
  while(estTriee==false){ 
    var rang=0
    while (getRayonCrepe(rang)!=nbCrepe){
      rang+=1
    }
    retourne(rang)
    nbCrepes-=1
  }
}